--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
   
+  <script src="JS/menu.js"></script>
+
+  
 </head>
 
 <body>
@@ -22,10 +25,30 @@
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
       <nav>
         <ul class="main-nav">
-          <li><a href="physcis.html">物理學習</a></li>
-          <li><a href="program.html">程式語言</a></li>
-          <li><a href="test.html">線上題庫</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
+              <div class="dropdown-content" id="myDropdown1">
+                  <a href="test.html">高中物理</a>
+                  <a href="program.html">LineBot</a>
+                  <a href="program.html">VPython</a>
+              </div>
+          </li>
+          <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
+              <div class="dropdown-content" id="myDropdown2">
+                  <a href="test.html">物理史小測驗</a>
+                  <a href="#">高中物理</a>
+              </div>
+
+          </li>
+
+          <li><a href="#">讀書心得</a></li>
+          <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction4()">作品分享</a>
+              <div class="dropdown-content" id="myDropdown4">
+                  <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
+                  <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
+                  <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+              </div>
+
+          </li>
         </ul>
       </nav>
     </header>
@@ -101,7 +124,7 @@
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
-         <li><a href="test.html">線上題庫</a></li>
+         <li><a href="test.html">讀書心得</a></li>
          <li><a href="contact.html">CONTACT</a></li>
       </ul>
 
@@ -123,6 +146,7 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
+
 
 </body>
 </html>
