--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
-                  <a href="test.html">物理史小測驗</a>
-                  <a href="#">高中物理</a>
+                  <a href="phyhistorytest.html">物理史小測驗</a>
+                  <a href="physexam.html">高中物理題目</a>
               </div>
 
           </li>
