--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">高中物理</a>
+                  <a href="test.html">物理學習</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
               </div>
@@ -123,7 +123,8 @@
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
-         <li><a href="program.html">程式語言</a></li>
+         <li><a href="program.html">LineBot</a></li>
+         <li><a href="program.html">VPython</a></li>
          <li><a href="test.html">讀書心得</a></li>
          <li><a href="contact.html">CONTACT</a></li>
       </ul>
@@ -132,6 +133,10 @@
       <p>
        Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
       </p>
+      
+      <h3 class="sub-title">CONTACE</h3>
+      <p>E-mail:ttnpgjqua26@gish.tyc.edu.tw</p>
+      
       <img src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
     </aside>
 
