--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="physexam.html">高中物理題目</a>
+                  <a href="#">學測歷屆試題</a>
               </div>
 
           </li>
