--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
-  
+
   <script src="JS/menu.js"></script>
 
   
@@ -26,8 +26,8 @@
       <nav>
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
-              <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">物理學習</a>
+              <div class="dropdown-content" id="myDropdown1" style='visibility:hidden'>
+                  <a href="test.html">高中物理</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
               </div>
@@ -35,8 +35,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
-                  <a href="physexam.html">高中物理題目</a>
-                  <a href="#">學測歷屆試題</a>
+                  <a href="#">高中物理</a>
               </div>
 
           </li>
@@ -124,8 +123,7 @@
       <h3 class="sub-title">類別</h3>
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
-         <li><a href="program.html">LineBot</a></li>
-         <li><a href="program.html">VPython</a></li>
+         <li><a href="program.html">程式語言</a></li>
          <li><a href="test.html">讀書心得</a></li>
          <li><a href="contact.html">CONTACT</a></li>
       </ul>
@@ -134,10 +132,6 @@
       <p>
        Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
       </p>
-      
-      <h3 class="sub-title">CONTACE</h3>
-      <p>E-mail:ttnpgjqua26@gish.tyc.edu.tw</p>
-      
       <img src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
     </aside>
 
