--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
-  
+
   <script src="JS/menu.js"></script>
 
   
@@ -26,7 +26,7 @@
       <nav>
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
-              <div class="dropdown-content" id="myDropdown1">
+              <div class="dropdown-content" id="myDropdown1" style='visibility:hidden'>
                   <a href="test.html">高中物理</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
@@ -35,7 +35,7 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
-                  <a href="physexam.html">高中物理題目</a>
+                  <a href="#">高中物理</a>
               </div>
 
           </li>
