--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@
       <p>
        Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
       </p>
+      
+       <h3 class="sub-title">CONTACT</h3>
+      <p>
+       E-mail:ttnpgjqua26@gish.tyc.edu.tw
+      </p>
       <img src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
+ 
 
   </div><!-- /.news-contents -->
 
