--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
       
        <h3 class="sub-title">CONTACT</h3>
       <p>
-       E-mail:ttnpgjqua26@gish.tyc.edu.tw
+       E-mail:<br>
+        ttnpgjqua26@gish.tyc.edu.tw
       </p>
       <img src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
     </aside>
