--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
        E-mail:<br>
         ttnpgjqua26@gish.tyc.edu.tw
       </p>
-      <img src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
+      <img style="text-align:center;" src="images/guidephy-qrcode.png"  alt="guidephy-qrcode">
     </aside>
 
  
