--- a/phystest.html
+++ b/phystest.html
@@ -116,6 +116,9 @@
   <div style="display:inline;"><button id="answer5" onclick="check(this)" style="width:18%;"></button></div>
 
 </div>
+ <div id="paper" style="text-align:center;visibility:hidden;">
+   <iframe src="https://guidephy.github.io/whiteboard.html"></iframe>
+ </div>
 
 
 
