--- a/phystest.html
+++ b/phystest.html
@@ -117,7 +117,7 @@
 
 </div>
  <div id="paper" style="text-align:center;visibility:hidden;">
-   <iframe src="https://guidephy.github.io/whiteboard.html"></iframe>
+   <iframe  width="100%"src="https://guidephy.github.io/whiteboard.html" scrolling="no"></iframe>
  </div>
 
 
