--- a/LineBot_lesson1.html
+++ b/LineBot_lesson1.html
@@ -121,9 +121,6 @@
       </p>
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
 
   </div><!-- /.news-contents -->
 
@@ -132,7 +129,7 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
-
+ <script src="JS/phystest.js"></script>
 </body>
 </html>
 
