--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -140,9 +140,7 @@
       </p>
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
+
 
   </div><!-- /.news-contents -->
 
@@ -151,7 +149,7 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
-
+ <script src="JS/phystest.js"></script>
 </body>
 </html>
 
