--- a/VPython_lesson0.html
+++ b/VPython_lesson0.html
@@ -131,6 +131,8 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
+    
+   <script src="JS/phystest.js"></script>
 
 </body>
 </html>
