--- a/VPython_lesson1.html
+++ b/VPython_lesson1.html
@@ -117,9 +117,7 @@
       </p>
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
+   
 
   </div><!-- /.news-contents -->
 
@@ -128,7 +126,7 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
-
+ <script src="JS/phystest.js"></script>
 </body>
 </html>
 
