--- a/VPython_lesson1.html
+++ b/VPython_lesson1.html
@@ -6,6 +6,7 @@
    <meta name="description" content="提供物理與程式學習的教學與心得">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="JS/menu.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
@@ -126,7 +127,6 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
- <script src="JS/phystest.js"></script>
 </body>
 </html>
 
