--- a/phystest.html
+++ b/phystest.html
@@ -17,6 +17,7 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
+  <script src="JS/menu.js"></script>
 
 
   
