--- a/program.html
+++ b/program.html
@@ -13,6 +13,7 @@
   <link href="css/style.css" rel="stylesheet">
   
   <meta name="google-site-verification" content="tvvXxbI18opHJBKJIQdDbub-eFv-PrXfNGiKNXskiL8" />
+   <script src="JS/menu.js"></script>
   
 </head>
 
@@ -144,6 +145,6 @@
       <p><small>&copy; 觀音高中物理科 林仟弘老師</small></p>
     </div>
   </footer>
- <script src="JS/phystest.js"></script>
+
 </body>
 </html>
