--- a/phystest.html
+++ b/phystest.html
@@ -118,7 +118,7 @@
 
 </div>
  <div id="paper" style="text-align:center;visibility:hidden;">
-   <iframe  width="100%"src="https://guidephy.github.io/whiteboard.html" scrolling="no"></iframe>
+   <iframe  width="100%" height="600"src="https://guidephy.github.io/whiteboard.html" scrolling="no"></iframe>
  </div>
 
 
