--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
-         <li><a href="test.html">讀書心得</a></li>
-         <li><a href="contact.html">CONTACT</a></li>
+         <li><a href="#">讀書心得</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
