--- a/VPython_lesson2.html
+++ b/VPython_lesson2.html
@@ -154,6 +154,7 @@
     <p>3.放置座標軸<br>
     <font color="#D18800">#關於座標軸</font><br>
     pointer_a=arrow(pos=vector(0,0,0),axis=vector(20,0,0),color=color.blue,shaftwidth=0.1)</p>
+    <img src="images/VPython/VPython-2-4.png"  alt=""><br>
 
    
     </article>
