--- a/VPython_lesson2.html
+++ b/VPython_lesson2.html
@@ -155,6 +155,9 @@
     <font color="#D18800">#關於座標軸</font><br>
     pointer_a=arrow(pos=vector(0,0,0),axis=vector(20,0,0),color=color.blue,shaftwidth=0.1)</p>
     <img src="images/VPython/VPython-2-4.png"  alt=""><br>
+      
+    <h3>課堂任務4:畫出一個運動的物體，且上面有跟著物體動的速度向量</h3>  
+       <img src="images/VPython/VPython-2-5.png"  alt="homework4"><br>
 
    
     </article>
