--- a/CarbonCapture.html
+++ b/CarbonCapture.html
@@ -33,6 +33,9 @@
 <h2 id="data"></h2>
 <h2 id="timer1">運行時間:0秒</h2>
 <h2 id="timer" style="display: none;"></h2>
+<br>
+<img src="images/equipment.png"  width="90%" alt="">
+
  
 </div>
 	
