--- a/LineBot_lesson3.html
+++ b/LineBot_lesson3.html
@@ -78,7 +78,9 @@
 
       <p>我們這節課要建立LineBot的圖文選單，供使用者能快速選擇想使用的功能或觀看資訊</br>
          如下圖所示，若有圖文選單，使用者可直接於選單中快速選取其所需服務。</p>
+      <div style="text-align:center;">
       <img src="images/LineBot/LineBot-3-1.png">
+       </div>
 
       <p>我們可在主頁下的左邊欄位內，找到聊天相關中的圖文選單<br>
          選擇圖文選單進入後，點擊右上角的「建立」即可以設定一組屬於自己的的圖文選單</p>
@@ -124,7 +126,9 @@
       <p>19.完成步驟1~18後，則已完成圖文選單設定，再次確認沒問題後，即可按儲存，完成圖文選單。</p>
       <img src="images/LineBot/LineBot-3-14.png">
       <p>此時，用手機的Line進到此LineBot的聊天室，將會在最下方看到剛設定的圖文選單，可點擊各欄位，檢查是否如設定時動作。</p>
+      <div style="text-align:center;">
       <img src="images/LineBot/LineBot-3-15.png">
+      </div>
 
       <h3>課程作業1-利用LineBot製作你的備審資料聊天機器人</h3>
       <p>需具備功能:</p>
