--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
+         <li><a href="exp.html">科學實驗</a></li>
          <li><a href="#">讀書心得</a></li>
       </ul>
 
