--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -131,8 +131,8 @@
       <ul class="sub-menu">
          <li><a href="physcis.html">物理學習</a></li>
          <li><a href="program.html">程式語言</a></li>
-         <li><a href="test.html">線上題庫</a></li>
-         <li><a href="contact.html">CONTACT</a></li>
+         <li><a href="exp.html">科學實驗</a></li>
+         <li><a href="#">讀書心得</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
