--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </header>
        <img src="images/VPython/VPython-3-0.png"  alt="From glowscript.org">
       <p>
-       此節課會學習到如何利用Vpython繪製常見的統計圖表，並利用此來繪製出物體運動的函數圖，如x-t圖、v-t圖， <a target="_blank" href="VPython_lesson3.html">點繫此處前往課程...</a>
+       此節課會學習到如何利用VPython繪製常見的統計圖表，並利用此來繪製出物體運動的函數圖，如x-t圖、v-t圖， <a target="_blank" href="VPython_lesson3.html">點繫此處前往課程...</a>
       </p>
       
       
