--- a/Boomerang.html
+++ b/Boomerang.html
@@ -74,6 +74,8 @@
       <p>以往做的迴力鏢都是V型或三葉式的，<br>
          但這個影片分享的做法是使用四葉式，不同的是除了可以用手接回迴力標外<br>
          還多了一個可用手指頭接的趣味</p>
+      
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F100001313178074%2Fvideos%2F3609850245735379%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 
 
       <h3>實驗材料:</h3><br>
