--- a/BridgeDesigner.html
+++ b/BridgeDesigner.html
@@ -147,9 +147,13 @@
       <p>4.在動畫執行時，若要再重新調整橋的結構，只要按上方<font color="red">橋樑設計</font>的按鈕，即會回到設計的界面。</p>
       <p>5.上方會顯示此橋建造的<font color="red">成本</font>，可試著以最低的成本讓卡車能通過橋樑。</p>
 
-      <img src="images/Exp/BridgeDesigner/BridgeDesigner-11.png"  alt="">
+      <img src="images/Exp/BridgeDesigner/BridgeDesigner-11.png"  alt=""><br>
 
-      <h3>Step4、繳交作業</h3>
+      <h3>課堂作業:</h3>
+      <p>請將3.Select the Deck Elevation and Suppport Configuration:中的Deck Elevation(橋的高度)，調整為: <font color="red">24 meters</font>，其它的參數也可依你的設計任意選擇，搭出一座橋，並在模擬動畫時，讓卡車能順利通過此橋。</p>
+
+
+      <h3>如何繳交作業</h3>
       <p>1.完成橋樑設計後，點擊上方的File，並點擊下方的<font color="red">Print</font>。</p>
       <p>2.列印服務中的名稱，選擇<font color="red">Adobe PDF</font>。</p>
       <p>3.最後按右下方的<font color="red">列印</font>，即會輸出一份此設計成果的PDF檔，將之命名為你的「班級座號姓名」，上傳至Classroom，即完成作業</p>
