--- a/VPython_lesson3.html
+++ b/VPython_lesson3.html
@@ -83,7 +83,7 @@
         f1.<font color="red">plot</font>(12,11)</p><br>
         <img src="images/VPython/VPython-3-1.png"  alt=""><br>
 
-      <p>2.折線圖gcurve():將數據點彼此以直線連接起來的統計圖表，若橫軸為時間，可觀察一段時間內的變化及趨勢</p>
+      <p>2.折線圖<font color="red">gcurve()</font>:將數據點彼此以直線連接起來的統計圖表，若橫軸為時間，可觀察一段時間內的變化及趨勢</p>
       <p>(1)繪製一折線圖:<br>
 
        f2 =<font color="red">gcurve</font>(color=color.green,data=[(3,5),(6,10),(9,7)])</p>
