--- a/WebDesign_lesson1.html
+++ b/WebDesign_lesson1.html
@@ -90,7 +90,7 @@
 
 
 
-      <h3>練習一、網頁基本的架構:</h3>
+      <h3>一、網頁必備的標籤:</h3>
 
 
       <p>&lt;!DOCTYPE html&gt;，&lt; html&gt;&lt;/html&gt;，&lt; head&gt;&lt;/head&gt;，&lt;body&gt;&lt;/body&gt;</p>
@@ -131,31 +131,31 @@
 
      <h3>網頁架構及標籤說明</h3>
 
-     <p>1.&lt;!DOCTYPE html&gt;<br>
+     <p>1.<font color="red">&lt;!DOCTYPE html&gt;</font><br>
       必須放在第一行，用來宣告文件類型。現在網頁的DOCTYPE基本上都是用&lt;!DOCTYPE html&gt;來表示這是一份標準的 HTML5 文件。</p>
 
-    <p>2.&lt;html&gt;……&lt;/html&gt;<br>
+    <p>2.<font color="red">&lt;html&gt;……&lt;/html&gt;</font><br>
       通常放在Doctype宣告的後面，HTML 網頁中一定有一個 &lt;html&gt;標籤，整個網頁中所有的 HTML 元素都包含在 &lt;html&gt;和&lt;/html&gt;標籤之間。</p>
 
     <p>此練習中的&lt;html&gt;標籤內還寫了lang="zh-Hant-TW"，表示這個網頁是一份繁體中文的文件。</p>
 
-    <p>3.&lt;head&gt;……&lt;/head&gt;<br>
+    <p>3.<font color="red">&lt;head&gt;……&lt;/head&gt;</font><br>
       這部分是描述網頁的資料，包括網頁的標題、說明、使用的外部JavaScript或CSS的連結等。在我們瀏覽網頁時，這此內容並不會顯示出來。</p>
     <p>此練習中，&lt;head&gt;……&lt;/head&gt;內有<br>
-      (1)&lt;meta charset="UTF-8"&gt;，是要把文字的編碼格式變成「UTF8」的編碼設定，如果沒有正確描述，可能會讓網頁變亂碼而無法正確的顯示文字。<br><br> 
-      (2)&lt;title&gt;……&lt;/title&gt;，它所包的文字即為此網頁在瀏覽器打開時的標題名稱，但因我們目前是在HTML練習區中撰寫，它並不是真的網頁，故無法看到其標題，未來若是編寫網頁，則會在開啟時從瀏覽器上看到其標題名稱，如下圖所示。</p>
+      (1)<font color="red">&lt;meta charset="UTF-8"&gt;</font>，是要把文字的編碼格式變成「UTF8」的編碼設定，如果沒有正確描述，可能會讓網頁變亂碼而無法正確的顯示文字。<br><br> 
+      (2)<font color="red">&lt;title&gt;……&lt;/title&gt;</font>，它所包的文字即為此網頁在瀏覽器打開時的標題名稱，但因我們目前是在HTML練習區中撰寫，它並不是真的網頁，故無法看到其標題，未來若是編寫網頁，則會在開啟時從瀏覽器上看到其標題名稱，如下圖所示。</p>
       <div style="text-align:center;">
       <img src="images/WebDesign/WebDesign-2.png"  alt="">
       </div>
-    <p>(3)&lt;meta name ="description" content="~"&gt;，用來描述網站的內容概要以及關鍵字，內容不會顯示在網頁上，但在google搜尋網頁時，meta中 content內部寫的文字會和標題一起出現，讓使用者能快速理解這是和什麼有關的網站。</p>
+    <p>(3)<font color="red">&lt;meta name ="description" content="~"&gt;</font>，用來描述網站的內容概要以及關鍵字，內容不會顯示在網頁上，但在google搜尋網頁時，meta中 content內部寫的文字會和標題一起出現，讓使用者能快速理解這是和什麼有關的網站。</p>
 
-    <p>4.&lt;body&gt;……&lt;/body&gt;:<br>
+    <p>4.<font color="red">&lt;body&gt;……&lt;/body&gt;</font>:<br>
       「body」標籤是HTML文件的主體，這裡輸入的內容才是會顯示在瀏覽器上，裡面可以文字、圖片、表格、影片...等內容。</p>
 
-    <p>(1)&lt;h1&gt;&lt;/h1&gt; ~ &lt;h6&gt;&lt;/h6&gt;:<br>
+    <p>(1)<font color="red">&lt;h1&gt;&lt;/h1&gt;</font> ~ <font color="red">&lt;h6&gt;&lt;/h6&gt;</font>:<br>
       文章標題是使用&lt;h1&gt;~&lt;h6&gt;標籤表示，「h」後面的數字愈大，顯示出來的標題就愈小，因此&lt;h1&gt;是最大的標題，&lt;h6&gt;是最小的。</p>
 
-    <p>(2)&lt;p&gt;……&lt;/p&gt;:<br>
+    <p>(2)<font color="red">&lt;p&gt;……&lt;/p&gt;</font>:<br>
       此標籤是用來顯示文章段落，通常寫文章時，會用&lt;p&gt;標籤包夾，包夾的內容就會變成段落，瀏覽器也會自動在段落後面換行，並讓段落間產生些許間隔，看起來像有分段的感覺，增加美觀及閱讀的便利性。</p>
 
 
