--- a/WebDesign_lesson1.html
+++ b/WebDesign_lesson1.html
@@ -71,11 +71,11 @@
 
       
 
-      <p>我們一般在網頁上看到的內容與影像，其實都是使用「HTML」撰寫出來的。</p>
+      <p>我們一般在網頁上看到的內容與影像，其實都是使用<font color="red">HTML</font>撰寫出來的。</p>
 
       <p>HTML是「Hyper Text Markup Language」的縮寫，是用來編寫網頁原始碥的語言，撰寫好的HTML經過瀏覽器(例如Chrome、IE、Edge...等)的解譯，才能讓我們看到文字、圖片、影像...等內容，因此網頁設計的第一步，就是學習用HTML。</p>
 
-      <p>HTML的寫法是以「<」和「>」包夾字串，這種格式稱為「標籤」，「標籤」有各式各樣的種類，我們會在下面的課程介紹。
+      <p>HTML的寫法是以<font color="red">「<」和「>」包夾字串</font>，這種格式稱為<font color="red">標籤</font>，「標籤」有各式各樣的種類，我們會在下面的課程介紹。
 
       <p>此教學網站的參考資料主要引用<a href="https://www.w3schools.com/" target="_blank">W3Schools</a>的線上教學資源以及旗標出版社「零基礎也能看得懂的HTML&CSS網頁設計」這本書籍。</p>
 
