--- a/WebDesign_lesson1.html
+++ b/WebDesign_lesson1.html
@@ -81,9 +81,9 @@
 
       <p>下面影片是W3Schools製作的HTML簡單介紹影片，我們可從中大致了解HTML的「標籤」和結構。</p>
 
-
+      <div style="text-align:center;">
       <iframe width="600" height="315" src="https://www.youtube.com/embed/ewZ_YWbIWXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+      </div>
 
       <p>一般，我們會使用編輯工具撰寫HTML，如Windows內建的記事本，或另行下載的軟體，較常見的有Sublime Text、Notepade++ 、Atom…等。</p>
       <p>此單元我們以練習為主，因此先不使用編輯軟體撰寫HTML，而是使用W3Schools提供的線上HTML撰寫平台來學習HTML，因其具有即寫即看的功能，較能快速了解HTML的元素和其結構，連結如下:<br><a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_default_default" target="_blank">W3Schools HTML練習區</a></p><br>
@@ -126,9 +126,9 @@
    </div>
 
      <p>3.按練習區上方的Run>按鈕，右邊則會顯示出其在網頁呈現的樣子，如下圖所示。</p>
-
+     <div style="text-align:center;">
      <img src="images/WebDesign/WebDesign-1.png"  alt=""><br>
-
+     </div>
      <h3>網頁架構及標籤說明</h3>
 
      <p>1.<font color="red">&lt;!DOCTYPE html&gt;</font><br>
