--- a/WebDesign_lesson1.html
+++ b/WebDesign_lesson1.html
@@ -129,7 +129,7 @@
      <div style="text-align:center;">
      <img src="images/WebDesign/WebDesign-1.png"  alt=""><br>
      </div>
-     <h3>網頁架構及標籤說明</h3>
+     <h3>網頁架構及必備標籤說明</h3>
 
      <p>1.<font color="red">&lt;!DOCTYPE html&gt;</font><br>
       必須放在第一行，用來宣告文件類型。現在網頁的DOCTYPE基本上都是用&lt;!DOCTYPE html&gt;來表示這是一份標準的 HTML5 文件。</p>
