--- a/WebDesign_lesson2.html
+++ b/WebDesign_lesson2.html
@@ -179,12 +179,11 @@
 
       <br>
 
-      <p>合併儲存格: colspan=" "</p>
-
-
-
-
-
+      <p>表格常用屬性:<br>
+        (1)合併儲存格: colspan=" "。<br>
+        (2)框線:border=' '，預設為0無框線，此練習設為1。</p>
+        (3)樣式:style=" "，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。
+    
 
     </article>
 
