--- a/WebDesign_lesson2.html
+++ b/WebDesign_lesson2.html
@@ -180,8 +180,12 @@
       <br>
 
       <p>表格常用屬性:<br>
-        (1)合併儲存格: 水平合併colspan=" " 垂直合併rowspan=" "。<br>
-              <p style="text-align:center;">HTML&darr;</p>
+
+        (1)框線:border=' '，預設為0無框線，此練習設為1。<br>
+        (2)樣式:style=" "，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
+    
+        (3)合併儲存格: 水平合併colspan=" " 垂直合併rowspan=" "。<br>
+      <p style="text-align:center;">HTML&darr;</p>
       <div style="background-color:#CAFFFF">
 
       <p>&lt;table border="1" style="width:100%"&gt;<br>
@@ -225,8 +229,6 @@
       </tr>
       </table>
       </div>
-        (2)框線:border=' '，預設為0無框線，此練習設為1。</p>
-        (3)樣式:style=" "，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。
     
 
     </article>
