--- a/WebDesign_lesson2.html
+++ b/WebDesign_lesson2.html
@@ -92,7 +92,7 @@
       <p>二、圖片<font color="red">&lt;img&gt;</font></p>
       <p>圖片是讓網頁變的易讀和讓網頁看起來更豐富的元素。</p>
       <p>要在網頁上顯示圖片，需使用&lt;img&gt;的標籤，此標籤比較特別，使用時不需用到結束標籤&lt;/img&gt;。</p>
-      <p>使用&lt;img&gt;顯示圖片時，需要放置兩個屬性在內，src屬性及alt屬性。src是要填上圖片的儲存路徑或網址，alt屬性是要填在圖片無法順利載入時，會取代影像顯示的文字，參考如下:</p>
+      <p>使用&lt;img&gt;顯示圖片時，需要放置兩個屬性在內，<font color="red">src</font>屬性及<font color="red">alt</font>屬性。src是要填上圖片的儲存路徑或網址，alt屬性是要填在圖片無法順利載入時，會取代影像顯示的文字，參考如下:</p>
 
       <p style="text-align:center;">HTML&darr;</p>
       <div style="background-color:#CAFFFF">
@@ -107,7 +107,7 @@
       <br>
       <p>三、超連結<font color="red">&lt;a&gt;……&lt;/a&gt;</font></p>
       <p>連結是網頁常使用到的元素，可以讓使用在只要點擊文字或影像，就能跳至其它的網頁，擴大網站的範圍。</p>
-      <p>要在使用上&lt;a&gt;建立超連結，需要放置一個href的屬性，href的屬性要填入欲連結的網址，並於&lt;a&gt;和&lt;/a&gt;之間輸入超連結欲顯示的文字。若希望使用者點擊後是另開視窗開啟網頁，可再加上&lt;a&gt;內再增加target="_blank"的屬性，參考如下:</p>
+      <p>要在使用上&lt;a&gt;建立超連結，需要放置一個<font color="red">href</font>的屬性，href的屬性要填入欲連結的網址，並於&lt;a&gt;和&lt;/a&gt;之間輸入超連結欲顯示的文字。若希望使用者點擊後是另開視窗開啟網頁，可再加上&lt;a&gt;內再增加target="_blank"的屬性，參考如下:</p>
 
       <p style="text-align:center;">HTML&darr;</p>
       <div style="background-color:#CAFFFF">
@@ -181,21 +181,21 @@
 
       <p>表格常用屬性:<br>
 
-        (1)框線:border=' '，預設為0無框線，此練習設為1。<br>
-        (2)樣式:style=" "，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
+        (1)框線:<font color="red">border=' '</font>，預設為0無框線，此練習設為1。<br>
+        (2)樣式:<font color="red">style=' '/font>，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
     
-        (3)合併儲存格: 水平合併colspan=" " 垂直合併rowspan=" "。<br>
+        (3)合併儲存格: 水平合併<font color="red">colspan=" "</font> 垂直合併<font color="red">rowspan=" "</font>。<br>
       <p style="text-align:center;">HTML&darr;</p>
       <div style="background-color:#CAFFFF">
 
       <p>&lt;table border="1" style="width:100%"&gt;<br>
       &lt;tr&gt;<br>
       &lt;th&gt;班級&lt;/th&gt;<br>
-      &lt;th colspan="2"&gt;物理成績&lt;/th&gt;<br>
+      &lt;th <font color="red">colspan="2</font>"&gt;物理成績&lt;/th&gt;<br>
       
       &lt;/tr&gt;<br>
-      &lt;tr rowspan=" "&gt;<br>
-      &lt;td&gt;201&lt;/td&gt;<br>
+      &lt;tr &gt;<br>
+      &lt;td <font color="red">rowspan=" "</font>&gt;201&lt;/td&gt;<br>
       &lt;td&gt;80&lt;/td&gt;<br>
       &lt;td&gt;50&lt;/td&gt;<br>
       &lt;/tr&gt;<br>
