--- a/WebDesign_lesson2.html
+++ b/WebDesign_lesson2.html
@@ -182,7 +182,7 @@
       <p>表格常用屬性:<br>
 
         (1)框線:<font color="red">border=' '</font>，預設為0無框線，此練習設為1。<br>
-        (2)樣式:<font color="red">style=' '/font>，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
+        (2)樣式:<font color="red">style=' '</font>，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
     
         (3)合併儲存格: 水平合併<font color="red">colspan=" "</font> 垂直合併<font color="red">rowspan=" "</font>。<br>
       <p style="text-align:center;">HTML&darr;</p>
@@ -248,9 +248,7 @@
       </p>
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
+
 
   </div><!-- /.news-contents -->
 
