--- a/WebDesign_lesson2.html
+++ b/WebDesign_lesson2.html
@@ -184,7 +184,7 @@
         (1)框線:<font color="red">border=' '</font>，預設為0無框線，此練習設為1。<br>
         (2)樣式:<font color="red">style=' '</font>，詳細內容在CSS的教學中介紹，此處我們使用"width:100%"讓表格寬占版面的100%。<br>
     
-        (3)合併儲存格: 水平合併<font color="red">colspan=" "</font> 垂直合併<font color="red">rowspan=" "</font>。<br>
+        (3)合併儲存格: 水平合併<font color="red">colspan=" "</font> 垂直合併<font color="red">rowspan=" "</font>，如下方所示，可和上面表格做比較。<br>
       <p style="text-align:center;">HTML&darr;</p>
       <div style="background-color:#CAFFFF">
 
@@ -195,7 +195,7 @@
       
       &lt;/tr&gt;<br>
       &lt;tr &gt;<br>
-      &lt;td <font color="red">rowspan=" "</font>&gt;201&lt;/td&gt;<br>
+      &lt;td <font color="red">rowspan="2"</font>&gt;201&lt;/td&gt;<br>
       &lt;td&gt;80&lt;/td&gt;<br>
       &lt;td&gt;50&lt;/td&gt;<br>
       &lt;/tr&gt;<br>
