--- a/VPython_lesson4.html
+++ b/VPython_lesson4.html
@@ -73,7 +73,7 @@
       </header>
 
       <p>之前的課程，我們已學會如何繪製物體的等速度運動<br>
-        這節課我們將進階，要介紹如何利用VPython繪製等加速度運動</p>
+        這節課我們將進階介紹如何利用VPython繪製等加速度運動</p>
 
       <h3>一、自由落體運動</h3><br>
 
