--- a/VPython_lesson4.html
+++ b/VPython_lesson4.html
@@ -176,7 +176,7 @@
 
 
       <h3>二、if()條件判斷</h3><br>
-      <p>在現實生活中，我們時常會視條件進行判斷下一步要怎麼做，在程式語言中，也能一樣的功能，就是使用if()函式，其運作情形如下圖所示:</p>
+      <p>在現實生活中，我們時常會視條件進行判斷下一步要怎麼做，在程式語言中，也能有一樣的功能，就是使用if()函式，其運作情形如下圖所示:</p>
 
       <div style="text-align:center;">
       <img src="images/VPython/VPython-4-2.png">
@@ -273,7 +273,7 @@
       <p>加分選項(2):增加球的運動軌跡。<br>
         sphere()內，增加<font color="red">make_trail=True,trail_type="points",interval=10</font>，顯示球的運動軌跡。<br>程式修改如下:</p>
       <div style="background-color:#CAFFFF">
-      <p>ball=sphere(pos=vector(0,ball_height ,0),make_trail=True,trail_type="points",interval=10,radius=size ,color=color.magenta ,v=vector(1,0,0))</p>
+      <p>ball=sphere(pos=vector(0,ball_height ,0), <font color="red"> make_trail=True,trail_type="points",interval=10, </font> radius=size ,color=color.magenta ,v=vector(2,0,0))</p>
       </div>
 
 
