--- a/WebDesign_lesson4.html
+++ b/WebDesign_lesson4.html
@@ -160,7 +160,8 @@
       <div style="text-align:center;">
       <img src="images/WebDesign/WebDesign-4-14.png"  alt=""><br>
       </div>
-      <p>Step8、此時上方會跳出網址，此即為網頁的連結，透過此連結將可從線上隨時看到你的網頁內容。</p>
+      <p>Step8、此時上方會跳出網址，此即為網頁的連結，透過此連結將可從線上隨時看到你的網頁內容，如下:<br>
+      <a href="https://gishphys.github.io/autobiography/">https://gishphys.github.io/autobiography/</a></p>
       <div style="text-align:center;">
       <img src="images/WebDesign/WebDesign-4-15.png"  alt=""><br>
       </div>
