--- a/LineBot_lesson4.html
+++ b/LineBot_lesson4.html
@@ -72,12 +72,14 @@
       <h3>使用Google Apps Script撰寫LineBot</h3>
       <br>
 
-      <p>我們先到Line官方帳號管理平台登入帳號，連結如下:<br><a href="https://tw.linebiz.com/login" target="_blank">https://tw.linebiz.com/login<a></p>
+      <p>Step1、我們先到Line官方帳號管理平台登入帳號，連結如下:<br><a href="https://tw.linebiz.com/login" target="_blank">https://tw.linebiz.com/login<a></p>
 
 
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-1.png"  alt=""><br>
       </div>
+
+      <p>Step2、</p>
 
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-2.png"  alt=""><br>
@@ -99,6 +101,8 @@
       <img src="images/LineBot/LineBot-4-6.png"  alt=""><br>
       </div>
 
+      <p>Step3、</p>
+
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-7.png"  alt=""><br>
       </div>
@@ -106,6 +110,8 @@
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-8.png"  alt=""><br>
       </div>
+
+      <p>Step4、</p>
 
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-9.png"  alt=""><br>
@@ -135,6 +141,8 @@
       <img src="images/LineBot/LineBot-4-15.png"  alt=""><br>
       </div>
 
+      <p>Step5、</p>
+
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-16.png"  alt=""><br>
       </div>
@@ -150,6 +158,8 @@
          <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-19.png"  alt=""><br>
       </div>
+
+      <p>Step6、</p>
 
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-20.png"  alt=""><br>
@@ -240,13 +250,19 @@
       <img src="images/LineBot/LineBot-4-28.png"  alt=""><br>
       </div>
 
+      <p>Step7、</p>
+
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-29.png"  alt=""><br>
       </div>
 
+      <p>Step8、</p>
+
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-30.png"  alt=""><br>
       </div>
+
+      <p>補充說明:</p>
 
       <div style="text-align:center;">
       <img src="images/LineBot/LineBot-4-31.png"  alt=""><br>
