--- a/taigi.html.html
+++ b/taigi.html.html
@@ -14,7 +14,7 @@
 
 <body>
 <div style="text-align:center;">
-<h1>台語羅馬拼音聽寫測驗</h1>
+<h1>台羅拼音聽寫測驗</h1>
 </div>
 <button id="sendBtn" onclick="send()">開始測驗</button><br>
 <p id="question"></p><br>
