--- a/taigi.html.html
+++ b/taigi.html.html
@@ -17,7 +17,7 @@
 <h1>台羅拼音聽寫測驗</h1>
 </div>
 <button id="sendBtn" onclick="send()">開始測驗</button><br>
-<p id="question"></p><br>
+<p id="question"></p>
 <p id="answer"></p><br>
 <audio id="questionvoice"src="" autoplay controls></audio>
 
