--- a/taigitest.html
+++ b/taigitest.html
@@ -58,8 +58,8 @@
 
   </div>
   
-    <div class="wrapper">
-      <h2 class="page-title">台羅拼音聽寫測驗</h2>
+    <div class="wrapper" style="text-align:center;">
+      <h3 class="page-title">台羅拼音聽寫測驗</h3>
     </div>
 
   <div class="news-contents wrapper">
