--- a/taigitest.html
+++ b/taigitest.html
@@ -58,14 +58,11 @@
 
   </div>
   
-    <div class="wrapper" style="text-align:center;">
-      <h3 class="page-title">台羅拼音聽寫測驗</h3>
-    </div>
-
   <div class="news-contents wrapper">
     <article>
      
   <div style="text-align:center;">
+  <h3  style="color:blue;">台羅拼音聽寫測驗</h3>
 
   <button id="sendBtn" onclick="send()">開始測驗</button><br>
   <p id="question"></p>
