--- a/taigitest.html
+++ b/taigitest.html
@@ -36,6 +36,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="phystest.html">高中物理題目</a>
+                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
           </li>
 
