--- a/LineBot_lesson1.html
+++ b/LineBot_lesson1.html
@@ -34,6 +34,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="phystest.html">高中物理題目</a>
+                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
           </li>
 
@@ -43,6 +44,7 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
 
           </li>
@@ -123,7 +125,7 @@
     </aside>
 
 
-  </div><!-- /.news-contents -->
+  </div>
 
   <footer>
     <div class="wrapper">
