--- a/phyhistorytest.html
+++ b/phyhistorytest.html
@@ -38,6 +38,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="phystest.html">高中物理題目</a>
+                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
 
           </li>
@@ -48,6 +49,7 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet285計畫</a>
                   <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
               </div>
           </li>
           
@@ -127,11 +129,9 @@
       </p>
     </aside>
 
-    <!-- ↓ 增加這個部分 ↓ -->
-    
-    <!-- ↑ 到這裡為止↑ -->
 
-  </div><!-- /.news-contents -->
+
+  </div>
 
   <footer>
     <div class="wrapper">
