--- a/VPython_lesson0.html
+++ b/VPython_lesson0.html
@@ -102,8 +102,8 @@
       <img src="images/VPython/VPython-0-2.png"  alt="http://vpython.org/">
       
       <p>
-        3.此網站的教學內容主要參考臺灣大學物理系石明豐教授和台南女中物理科黃頌喬老師的上課講義，在此特別感謝。
-      </>
+        3.此網站的教學內容主要參考臺灣大學物理系石明豐教授、台南女中物理科黃頌喬老師和中和高中黃一哲老師的上課講義，在此特別感謝。
+      </p>
 
      
     </article>
