--- a/LineBot_lesson5.html
+++ b/LineBot_lesson5.html
@@ -96,7 +96,7 @@
       </div>
       <p>6、回到單元3已建立好google apps script的程式碼，<br>
       在 var channel_access_token = "你的Linebot的channel access token" 的下面<font color="red">新增4行程式碼</font>，<br>
-             記得將"你的試算表ID" <font color="red">改成</font>第5步中<font color="blue">你的試算表的ID</blue>。<br>
+             記得將"你的試算表ID" <font color="red">改成</font>第5步中<font color="blue">你的試算表的ID</>。<br>
 
             <font color="blue">var ss = SpreadsheetApp.openById("你的試算表ID"); //試算表ID<br>
 
