--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href="test.html">高中物理</a>
+                  <a href="https://www.glowscript.org/#/user/ttnpgjqua26stu/folder/MyPrograms/program/MagneticEffectofElectricCurrent">高中物理</a>
                   <a href="program.html">LineBot</a>
                   <a href="program.html">VPython</a>
               </div>
