--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        <img src="images//LineBot/LineBot-7-0.png"  alt="">
        </div>
       <p>
-       此堂課要介紹LineBot更多元的回覆方式，如圖片、影片、確認按鈕...等，以製作更多互動性的聊天機器人， <a target="_blank" href="LineBot_lesson7.html">點繫此處前往課程...</a>
+       此堂課要介紹LineBot更多不同的回覆方式，如圖片、影片、確認按鈕...等，以製作更多互動性的聊天機器人， <a target="_blank" href="LineBot_lesson7.html">點繫此處前往課程...</a>
       </p>
       <br>
       
